--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" 
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" 
+           xmlns:fx="http://javafx.com/fxml/1" 
            fx:controller="controller.LoginController"
            styleClass="login-background">
 
-   
    <center>
       <VBox alignment="CENTER" spacing="25" maxWidth="450" styleClass="container-medium">
          <padding>
