--- a/src/main/resources/fxml/PaymentDetails.fxml
+++ b/src/main/resources/fxml/PaymentDetails.fxml
@@ -300,7 +300,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="stateComboBox" maxWidth="1.7976931348623157E308" promptText="Select State" styleClass="border-gray-light,padding-15">
+                        <ComboBox fx:id="stateComboBox" maxWidth="Infinity" promptText="Select State" styleClass="border-gray-light,padding-15">
                         </ComboBox>
                      </VBox>
                      
@@ -323,7 +323,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="countryComboBox" maxWidth="1.7976931348623157E308" promptText="Select Country" styleClass="border-gray-light,padding-15">
+                        <ComboBox fx:id="countryComboBox" maxWidth="Infinity" promptText="Select Country" styleClass="border-gray-light,padding-15">
                         </ComboBox>
                      </VBox>
                   </GridPane>
