--- a/src/main/resources/fxml/CustomerOverview.fxml
+++ b/src/main/resources/fxml/CustomerOverview.fxml
@@ -134,7 +134,10 @@
                      </Text>
                   </VBox>
                </HBox>
-                               <Button fx:id="submitTicketAction" styleClass="button-primary" text="Submit Ticket" />
+               <HBox spacing="10">
+                  <Button fx:id="submitTicketAction" styleClass="button-primary" text="Submit Ticket" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="viewTicketsAction" styleClass="button-secondary" text="View My Tickets" HBox.hgrow="ALWAYS" />
+               </HBox>
             </VBox>
             
             <VBox spacing="15" styleClass="content-card" HBox.hgrow="ALWAYS">
